--- a/AirisVS.ipynb
+++ b/AirisVS.ipynb
@@ -108,24 +108,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yKxJC6PW1pBO",
-        "outputId": "0d37b88d-dfb5-4829-fa33-7e2f917eb00f"
+        "outputId": "ace28ab8-e22a-42e5-a5da-3648bc0e6b9c"
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Ingresa tu nombre completo\n",
-            " a\n",
+            " Airis Vianey\n",
             "---------------\n",
             "Ingresa tu apellido paterno\n",
-            " a\n",
+            " Villalobos\n",
             "---------------\n",
             "Ingresa tu apellido materno\n",
-            " a\n",
+            " Sosa\n",
             "  \n",
-            "a a a\n"
+            "Airis Vianey Villalobos Sosa\n"
           ]
         }
       ]
